[gd_scene load_steps=37 format=2]

[ext_resource path="res://assets/enemy/Run (7).png" type="Texture" id=1]
[ext_resource path="res://assets/enemy/Run (5).png" type="Texture" id=2]
[ext_resource path="res://assets/enemy/Run (3).png" type="Texture" id=3]
[ext_resource path="res://assets/enemy/Dead (8).png" type="Texture" id=4]
[ext_resource path="res://assets/enemy/Dead (4).png" type="Texture" id=5]
[ext_resource path="res://assets/enemy/Run (4).png" type="Texture" id=6]
[ext_resource path="res://assets/enemy/Run (1).png" type="Texture" id=7]
[ext_resource path="res://assets/enemy/Run (8).png" type="Texture" id=8]
[ext_resource path="res://assets/enemy/Dead (9).png" type="Texture" id=9]
[ext_resource path="res://assets/enemy/Dead (3).png" type="Texture" id=10]
[ext_resource path="res://assets/enemy/Dead (7).png" type="Texture" id=11]
[ext_resource path="res://assets/enemy/Dead (6).png" type="Texture" id=12]
[ext_resource path="res://assets/enemy/Dead (2).png" type="Texture" id=13]
[ext_resource path="res://assets/enemy/Dead (1).png" type="Texture" id=14]
[ext_resource path="res://assets/enemy/Dead (5).png" type="Texture" id=15]
[ext_resource path="res://assets/enemy/Dead (10).png" type="Texture" id=16]
[ext_resource path="res://assets/enemy/Run (6).png" type="Texture" id=17]
[ext_resource path="res://assets/enemy/Run (2).png" type="Texture" id=18]
[ext_resource path="res://assets/enemy/Idle (2).png" type="Texture" id=19]
[ext_resource path="res://assets/enemy/Idle (8).png" type="Texture" id=20]
[ext_resource path="res://assets/enemy/Idle (9).png" type="Texture" id=21]
[ext_resource path="res://assets/enemy/Idle (7).png" type="Texture" id=22]
[ext_resource path="res://assets/enemy/Idle (1).png" type="Texture" id=23]
[ext_resource path="res://assets/enemy/Idle (4).png" type="Texture" id=24]
[ext_resource path="res://assets/enemy/Idle (6).png" type="Texture" id=25]
[ext_resource path="res://assets/enemy/Idle (3).png" type="Texture" id=26]
[ext_resource path="res://assets/enemy/Idle (10).png" type="Texture" id=27]
[ext_resource path="res://assets/enemy/Idle (5).png" type="Texture" id=28]
[ext_resource path="res://enemy/Robot.gd" type="Script" id=29]
[ext_resource path="res://assets/enemy/Jump (5).png" type="Texture" id=30]
[ext_resource path="res://assets/enemy/Jump (8).png" type="Texture" id=31]
[ext_resource path="res://assets/enemy/Jump (7).png" type="Texture" id=32]
[ext_resource path="res://assets/enemy/Jump (9).png" type="Texture" id=33]
[ext_resource path="res://assets/enemy/Jump (6).png" type="Texture" id=34]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 23 ), ExtResource( 19 ), ExtResource( 26 ), ExtResource( 24 ), ExtResource( 28 ), ExtResource( 25 ), ExtResource( 22 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 27 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 18 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 17 ), ExtResource( 1 ), ExtResource( 8 ) ],
"loop": true,
"name": "run",
"speed": 12.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 16 ) ],
"loop": false,
"name": "dead",
"speed": 15.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 34 ), ExtResource( 32 ), ExtResource( 31 ), ExtResource( 33 ) ],
"loop": true,
"name": "jump",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 28.3538 )

[node name="Robot" type="KinematicBody2D"]
script = ExtResource( 29 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.15, 0.15 )
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7.40472 )
shape = SubResource( 2 )

[node name="ActionTimer" type="Timer" parent="."]

[node name="DeathTimer" type="Timer" parent="."]
[connection signal="timeout" from="ActionTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
